Fixed endpoints for users
